# hestia

./: Cargo.toml  PLAN.md  README.md  action.yml  flake.nix
.github/workflows/: ci.yml  gc.yml  perf.yml  release.yml
action/: README.md  action.yml  deprecated-main.js  deprecated-post.js  main.js
action/post/: action.yml  main.js  post.js
docs/: architecture.md  cli.md  gc.als
examples/: chunk_sweep.rs  dump_layout.rs
hestia-core/: Cargo.toml
hestia-core/src/: chunker.rs  lib.rs  manifest.rs  refnorm.rs
nix/: package.nix
src/: chunker.rs  cli.rs  drain.rs  gc.rs  lib.rs  manifest.rs  pathinfo.rs  pipeline.rs  protocol.rs  refnorm.rs  serve.rs  substituter.rs  upstream.rs
src/gha/: blob.rs  mod.rs  rest.rs  savemutable.rs  twirp.rs
tests/: chunker_e2e.rs  drain_bench.rs  failure_modes.rs  gc.rs  gha_blob_robustness.rs  gha_fake.rs  gha_real.rs  gha_rest_robustness.rs  pathinfo_real.rs  pipeline_consistency.rs  pipeline_e2e.rs  serve_daemon.rs  substituter.rs
tests/support/: common.rs  fake_gha.rs  mod.rs  sim.rs  store.rs
